cabal-version:   3.0
name:            maelstrom-node
version:         0.1.0.0

-- synopsis:
-- description:
license:         MIT
license-file:    LICENSE
author:          Mikhail Lazarev
maintainer:      m282021@gmail.com

-- copyright:
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common lang
  default-language:   Haskell2010
  default-extensions:
    NoStarIsType
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DeriveTraversable
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    PackageImports
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances

  ghc-options:
    -- -Werror 
    -Wall -Wcompat -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -Wmissing-export-lists -Wmissing-deriving-strategies
    -Wmissing-fields

library
  import:           lang
  exposed-modules:  Maelstrom
  other-modules:
    Maelstrom.IO
    Maelstrom.Message
    Maelstrom.Node

  -- other-extensions:
  build-depends:
    , aeson
    , async
    , base                 ^>=4.15.1.0
    , bytestring
    , indexed-traversable
    , text

  hs-source-dirs:   src
  default-language: Haskell2010

test-suite maelstrom-node-test
  import:           lang
  default-language: Haskell2010

  -- other-modules:
  -- other-extensions:
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    , base            ^>=4.15.1.0
    , maelstrom-node
